# mcp-stock-market-analysis

./: .gitignore  README.md  alphavantage_service.py  main.py  models.py  pyproject.toml  requirements.txt  server.py  stock_analyzer.py  test_api.py
dashboard/: app.py
